[project]
name = "tsproj-ltsfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "datasets>=2.17.1",
    "einops>=0.7.0",
    "huggingface_hub>=0.36.2",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<1.27",
    "pandas>=2.1.4",
    "patool>=4.0.4",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timesfm @ git+https://github.com/google-research/timesfm.git",
    "tirex-ts[all]>=1.4.0",
    "torch>=2.4,<2.5",
    "transformers>=4.41,<5",
    "uni2ts @ git+https://github.com/SalesforceAIResearch/uni2ts.git",
]
